# helpdesk-voice-api

./: .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-deploy.yml
app/alembic/: env.py
app/alembic/versions/: 03ac97b8405d_team_id_made_nullable.py  42285897e1cf_init.py  5a6815ab8bfd_added_fields_to_ticket.py  7a3fe1167646_add_fk_cascade_to_subcategoryteam.py  7bd6395a5bd2_assigned_team_droped.py  9e4b4918d0e0_add_server_defaults_to_timestamps.py  9fe22654b5d8_client_visibility_field_added.py  d224bb9201cd_team_name_refactored_to_company_id.py
app/api/: db.py  main.py  models.py
app/api/v1/routers/: categories.py  subcategories.py  ticket_classifier.py  utils.py
scripts/: start.sh
