[project]
name = "auto-ticket-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "coverage>=7.13.4",
    "fastapi[standard]>=0.135.1",
    "google-genai>=1.66.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]
